🚘👵 Checkpoint ./server.js:1016347/4335:1039903/100 ./package.json:1016347/22:1039903/37 ./lib/random.js:1016347/57 ./lib/util.js:1016347/349 ./lib/definitions.js:1016347/6

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "efrost-arras",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "arrasio/src/server/server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "google-closure-library": "^20180506.0.0"
+    "google-closure-library": "^20180506.0.0",
+    "uws": "9.148.x"
   },
   "engines": {
     "node": "8.x"
