💎⚾️ Checkpoint ./server.js:1016347/5 ./package.json:1016347/12

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node server"
   },
   "dependencies": {
-    "google-closure-library": "^20180506.0.0",
-    "uws": "9.148.x"
+    "google-closure-library": "20180506.0.0",
+    "ws": "6.1.x"
   },
   "engines": {
     "node": "8.x"
