--- a/config.json
+++ b/config.json
@@ -17,10 +17,10 @@
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "roid", "norm", "norm", "roid" ],
-    [ "norm", "nest", "roid", "norm" ],
-    [ "norm", "roid", "nest", "norm" ],
-    [ "roid", "norm", "norm", "roid" ]
+    [ "norm", "norm", "norm", "roid" ],
+    [ "norm", "nest", "norm", "norm" ],
+    [ "norm", "norm", "nest", "norm" ],
+    [ "norm", "norm", "norm", "norm" ]
   ],
   "X_GRID": 4,
   "Y_GRID": 4,
