👰🕍 Checkpoint ./config.json:5499836/1886

--- a/config.json
+++ b/config.json
@@ -17,13 +17,24 @@
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "norm", "norm", "norm", "roid" ],
-    [ "norm", "nest", "norm", "norm" ],
-    [ "norm", "norm", "nest", "norm" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],    
     [ "norm", "norm", "norm", "norm" ]
   ],
-  "X_GRID": 4,
-  "Y_GRID": 4,
+  "X_GRID": 15,
+  "Y_GRID": 15,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
