⛸🎾 Checkpoint ./config.json:5499836/11439 ./server.js:5499836/20384

--- a/config.json
+++ b/config.json
@@ -17,24 +17,42 @@
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],
-    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid", ],    
-    [ "norm", "norm", "norm", "norm" ]
-  ],
-  "X_GRID": 15,
-  "Y_GRID": 15,
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],  
+    [ "norm", "roid", "nest", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ],
+    [ "norm", "roid", "roid", "norm", "roid", "roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid","roid" ]
+  "X_GRID": 33,
+  "Y_GRID": 33,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
