--- a/config.json
+++ b/config.json
@@ -11,17 +11,17 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 5000,
-  "HEIGHT": 5000,
+  "WIDTH": 4000,
+  "HEIGHT": 4000,
   "MODE": "maze",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
     [ "norm", "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
+    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
+    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
+    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm" ],
     [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
     [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
     [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
@@ -44,13 +44,13 @@
     [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
     [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
     [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
+    [ "norm", "wall", "wall", "wall", "wall", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm" ],
+    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
+    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
+    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm" ]
+
     ],
   "X_GRID": 33,
   "Y_GRID": 33,
