--- a/config.json
+++ b/config.json
@@ -18,8 +18,8 @@
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
     [ "rwall", "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm" ],
-    [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
-    [ "norm", "wall", "wall", "wall", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm" ],
+    [ "norm", "mall", "norm", "wall", "norm", "wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
+    [ "norm", "norm", "norm", "wall", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm" ],
     [ "norm", "wall", "wall", "wall", "norm", "wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","wall","wall","wall","norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm","wall","wall","wall","wall","norm","norm","norm","norm","norm","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm" ],
     [ "norm", "wall", "norm", "wall", "norm", "norm","norm","wall","wall","wall","norm","norm","twall","norm","norm","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","wall","norm","wall","norm" ],
