👩‍❤️‍💋‍👩👆 Checkpoint ./config.json:8261219/440 ./lib/definitions.js:8261219/811

--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 6000,
+  "WIDTH": 7200,
   "HEIGHT": 6000,
   "MODE": "ffa",
   "RANDOM_COLORS": false,
@@ -40,14 +40,14 @@
     ["norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","wall","nest","norm","nest","nest","nest","nest","nest","wall","nest","norm","wall","norm","wall","norm","wall","wall","norm","norm","norm","norm"],
     ["norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","wall","nest","norm","norm","norm","norm","norm","norm","wall","nest","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
     ["norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","wall","nest","nest","nest","nest","nest","nest","nest","wall","nest","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","wall","norm","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm"],
-    ["norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm"],
-    ["norm","norm","norm","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
+    ["norm","wall","wall","wall","norm","wall","norm","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm"],
+    ["norm","wall","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","wall","wall","norm","wall","norm","wall","norm","norm"],
+    ["norm","wall","norm","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","wall","norm","norm"],
+    ["norm","wall","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","norm","norm","norm"],
+    ["norm","wall","wall","wall","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","norm","norm","wall","wall","wall","norm","norm","wall","norm","norm","norm","norm"],
+    ["norm","norm","norm","wall","norm","norm","norm","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
+    ["norm","norm","norm","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
+    ["norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","wall","norm","norm","norm","norm"],
     ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"]
   ],
 
