--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server"
   },
   "dependencies": {
-    "google-closure-library": "20180506.0.0",
+    "google-closure-library": "^20210106.0.0",
     "ws": "6.1.x"
   },
   "engines": {
