--- a/config.json
+++ b/config.json
@@ -11,44 +11,44 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 5200,
-  "HEIGHT": 3000,
+  "WIDTH": 4000,
+  "HEIGHT": 4000,
   "MODE": "ffa",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
-  "ROOM_SETUP": [
-    ["wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm"],
-    ["norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm","norm","norm"],
-    ["norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm"],
-    ["norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm"],
-    ["norm","wall","norm","wall","wall","wall","wall","norm","wall","norm","norm","wall","norm","nest","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","wall","norm","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","wall","norm","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","norm"],
-    ["norm","wall","norm","wall","norm","norm","wall","wall","wall","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm","norm","norm","wall","norm"],
-    ["norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm"],
-    ["norm","wall","norm","wall","wall","wall","norm","norm","norm","wall","norm","wall","nest","nest","nest","nest","nest","nest","nest","wall","wall","norm","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm"],
-    ["norm","wall","norm","nest","norm","wall","norm","norm","wall","wall","norm","wall","nest","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm"],
-    ["norm","wall","norm","norm","nest","wall","norm","norm","norm","wall","norm","wall","nest","norm","nest","nest","nest","nest","nest","wall","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","wall","norm"],
-    ["norm","wall","wall","wall","wall","wall","norm","norm","wall","wall","norm","wall","nest","norm","nest","norm","norm","norm","nest","wall","wall","norm","norm","wall","norm","wall","norm","norm","wall","wall","wall","norm"],
-    ["norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","wall","nest","norm","nest","norm","norm","norm","nest","wall","wall","wall","wall","wall","norm","wall","norm","norm","wall","norm","wall","norm"],
-    ["norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","wall","nest","norm","nest","norm","nest","norm","nest","wall","wall","norm","norm","norm","norm","wall","norm","norm","wall","norm","wall","norm"],
-    ["norm","norm","norm","wall","wall","wall","norm","norm","wall","norm","norm","wall","nest","norm","nest","nest","nest","nest","nest","wall","wall","norm","wall","norm","norm","wall","norm","norm","wall","norm","wall","norm"],
-    ["norm","norm","norm","wall","norm","norm","norm","norm","wall","norm","wall","wall","nest","norm","nest","norm","nest","norm","nest","wall","wall","norm","wall","norm","norm","wall","norm","wall","wall","norm","wall","norm"],
-    ["norm","norm","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","nest","norm","nest","norm","norm","norm","nest","norm","norm","norm","wall","norm","norm","wall","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","norm","norm","norm","wall","wall","wall","wall","nest","norm","nest","norm","norm","norm","nest","wall","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","wall","wall","wall","norm","wall","norm","wall","nest","norm","nest","norm","norm","norm","nest","wall","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","wall","nest","norm","nest","nest","nest","nest","nest","wall","wall","norm","wall","norm","wall","norm","wall","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","wall","nest","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","wall","nest","nest","nest","nest","nest","nest","nest","wall","wall","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","wall","wall","wall","norm","wall","norm","wall","wall","wall","norm","wall","wall","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm"],
-    ["norm","wall","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","wall","wall","norm","wall","norm","wall","norm","norm"],
-    ["norm","wall","norm","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","wall","norm","norm"],
-    ["norm","wall","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","wall","norm","wall","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","wall","wall","wall","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","norm","norm","wall","wall","wall","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","norm","norm","norm","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","wall","wall","wall","wall","wall","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","wall","wall","norm","norm","norm","norm"],
-    ["norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"]
+"ROOM_SETUP": [
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "wall", "norm", "norm", "wall", "norm","wall","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","wall","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm","wall","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","wall","norm","norm","norm","wall","norm","norm","norm","wall","wall","wall","norm","norm","norm","wall","wall","norm","norm","wall","norm","norm","wall","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","wall","norm","norm","norm","wall","norm","wall","norm","norm","wall","wall","norm","wall","norm","wall","wall","norm"],
+    [ "norm",  "wall", "norm", "norm", "norm", "wall","norm","wall","norm","wall","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","wall","norm","norm","wall","wall","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","wall","norm","wall","wall","norm","norm","wall","norm","norm","norm","wall","norm","norm"],
+    [ "norm",  "wall", "norm", "norm", "norm", "norm","norm","wall","norm","wall","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","wall","wall","norm","norm","norm","norm"],
+    [ "norm",  "wall", "wall", "norm", "wall", "norm","norm","norm","wall","wall","norm","norm","wall","norm","norm","wall","norm","norm","wall","norm","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "wall", "norm", "norm", "wall", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "norm", "wall","norm","wall","norm","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "wall", "norm", "norm", "wall","norm","wall","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","norm","norm","wall","wall","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","wall","norm","wall","norm","norm","wall","wall","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","norm","wall","norm","norm","norm","wall","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "norm", "norm","norm","norm","wall","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","wall","wall","norm","norm","norm","wall","wall","norm","norm","norm"],
+    [ "norm",  "wall", "norm", "norm", "norm", "wall","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","wall","norm","wall","wall","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "wall", "norm","norm","norm","wall","norm","norm","norm","nest","nest","nest","nest","nest","nest","nest","nest","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","wall","norm"],
+    [ "norm",  "norm", "wall", "norm", "norm", "norm","wall","norm","wall","norm","wall","norm","wall","wall","wall","norm","wall","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm","norm","wall","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "norm", "norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","wall","norm","norm","norm"],
+    [ "norm",  "norm", "wall", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "wall", "norm", "wall", "norm", "wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm"],
+    [ "norm",  "wall", "wall", "norm", "norm", "wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","norm","wall","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "wall", "norm", "norm","norm","norm","wall","wall","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","wall","wall","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm"],
+    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"]
   ],
   
   "X_GRID": 32,
