--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "google-closure-library": "^20210106.0.0",
     "ws": "6.1.x",
     "eris": "^0.15.0",
-    "node": "^10.16.3"
+    "node": "^10.16.3",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "10.x"
