🎫🚦 Checkpoint ./server.js:27621106/1030 ./package.json:27621106/767 ./config.json:27621106/9

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eris": "^0.15.0",
     "node": "^10.16.3",
     "express": "^4.17.1",
-    "xss-filters": "^1.2.7"
+    "xss-filters": "^1.2.7",
+    "bot-detector": "^1.0.10"
   },
   "engines": {
     "node": "10.x"
