🐀📮 Checkpoint ./package.json:27621106/844 ./functions/security/security.js:27621106/89 ./functions/security/security.json:27621106/103 ./server.js:27621106/935

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": "^10.16.3",
     "express": "^4.17.1",
     "xss-filters": "^1.2.7",
-    "bot-detector": "^1.0.10"
+    "bot-detector": "^1.0.10",
+    "eslint-plugin-security-node": "^1.0.13"
   },
   "engines": {
     "node": "10.x"
