--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "express": "^4.17.1",
     "xss-filters": "^1.2.7",
     "bot-detector": "^1.0.10",
-    "eslint-plugin-security-node": "^1.0.13"
+    "eslint-plugin-security-node": "^1.0.13",
+    "body-parser": "^1.19.0",
+    "discord.js": "^12.1.1",
+    "ejs": "^3.0.2",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "memorystore": "^1.6.2",
+    "mongoose": "^5.9.9",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.3"
   },
   "engines": {
     "node": "10.x"
