--- a/config.json
+++ b/config.json
@@ -14,42 +14,19 @@
   "server_closed": false,
   "WIDTH": 4000,
   "HEIGHT": 4000,
-  "MODE": "ffa",
+  "MODE": "tdm",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
 "ROOM_SETUP": [
-    [ "bas1",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","bas4"],
-    [ "norm",  "wall", "norm", "norm", "wall", "norm","wall","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","wall","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm","wall","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","wall","norm","norm","norm","wall","norm","norm","norm","wall","wall","wall","norm","norm","norm","wall","wall","norm","norm","wall","norm","norm","wall","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "norm", "wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","wall","norm","norm","norm","wall","norm","wall","norm","norm","wall","wall","norm","wall","norm","wall","wall","norm"],
-    [ "norm",  "wall", "norm", "norm", "norm", "wall","norm","wall","norm","wall","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","wall","norm","norm","wall","wall","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","wall","norm","wall","wall","norm","norm","wall","norm","norm","norm","wall","norm","norm"],
-    [ "norm",  "wall", "norm", "norm", "norm", "norm","norm","wall","norm","wall","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","wall","wall","norm","norm","norm","norm"],
-    [ "norm",  "wall", "wall", "norm", "wall", "norm","norm","norm","wall","wall","norm","norm","wall","norm","norm","wall","norm","norm","wall","norm","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "norm", "norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "wall", "norm", "norm", "wall", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "norm", "wall","norm","wall","norm","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "wall", "norm", "norm", "wall","norm","wall","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm"],
-    [ "bugb",  "norm", "norm", "wall", "wall", "norm","norm","norm","norm","wall","wall","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","wall","norm","wall","norm","norm","wall","wall","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","norm","norm","wall","norm","norm","norm","wall","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "norm", "norm","norm","norm","wall","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","wall","wall","norm","norm","norm","wall","wall","norm","norm","norm"],
-    [ "norm",  "wall", "norm", "norm", "norm", "wall","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","norm","norm","wall","norm","wall","wall","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","wall","nest","nest","nest","nest","nest","nest","nest","nest","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "wall", "norm","norm","norm","wall","norm","norm","norm","nest","nest","nest","nest","nest","nest","nest","nest","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","wall","norm"],
-    [ "norm",  "norm", "wall", "norm", "norm", "norm","wall","norm","wall","norm","wall","norm","wall","wall","wall","norm","wall","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm","norm","wall","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "norm", "norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","wall","norm","norm","norm"],
-    [ "norm",  "norm", "wall", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "wall", "norm", "wall", "norm", "wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","wall","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "wall", "norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","norm"],
-    [ "norm",  "wall", "wall", "norm", "norm", "wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","wall","norm","wall","norm","norm","wall","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "wall", "wall","norm","norm","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","wall","norm","wall","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "wall", "norm", "norm","norm","norm","wall","wall","wall","norm","wall","norm","wall","norm","norm","norm","norm","wall","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm"],
-    [ "norm",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","wall","norm","wall","wall","wall","norm","norm","norm","norm","norm","wall","wall","norm","norm","norm","norm","norm","norm"],
-    [ "bas3",  "norm", "norm", "norm", "norm", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","norm","bas2"]
+   ["bas1", "norm", "norm","norm", "norm", "norm","norm", "norm", "bas2"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["bas3", "norm", "norm","norm", "norm", "norm","norm", "norm", "bas4"]
   ],
   
   "X_GRID": 32,
