--- a/config.json
+++ b/config.json
@@ -17,16 +17,16 @@
   "MODE": "tdm",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
-"ROOM_SETUP": [
-   ["bas1", "norm", "norm","norm", "norm", "norm","norm", "norm", "bas2"],
+  "ROOM_SETUP": [
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["watr", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["bas3", "norm", "norm","norm", "norm", "norm","norm", "norm", "bas4"]
+   ["norm", "norm", "norm","norm", "cys1", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"]
   ],
   
   "X_GRID": 32,
