🌯🚍 Checkpoint ./server.js:24501867/1793 ./config.json:24501867/64

--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
    ["norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["watr", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
+   ["watr", "watr", "watr","watr", "watr", "watr","watr", "watr", "watr"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "cys1", "norm","norm", "norm", "norm"],
