--- a/config.json
+++ b/config.json
@@ -11,10 +11,9 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "server_closed": false,
-  "WIDTH": 4000,
-  "HEIGHT": 4000,
-  "MODE": "tdm",
+   "WIDTH": 7000,
+  "HEIGHT": 7000,  
+  "MODE": "tdm",  
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
@@ -25,48 +24,47 @@
    ["watr", "watr", "watr","watr", "watr", "watr","watr", "watr", "watr"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "cys1", "norm","norm", "norm", "norm"],
+   ["norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm"],
    ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"]
   ],
-  
-  "X_GRID": 32,
-  "Y_GRID": 32,
+  "X_GRID": 9,
+  "Y_GRID": 9,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
-  "ROOM_BOUND_FORCE": 1,
+  "ROOM_BOUND_FORCE": 0.01,
   "FOOD": [
     0, 
-    0.75,
-    0.22,
-    0.1,
-    0.005,
+    0, 
+    0, 
+    0, 
+    0, 
     0,
     0
   ],
   "FOOD_NEST": [
     0, 
-    0.0,
-    0.0,
-    0.75,
-    0.23,
-    0.02,
+    0, 
+    0, 
+    0, 
+    0, 
+    0, 
     0
   ],
-  "MAX_SKILL": 10,
+  "MAX_SKILL": 9,
   "SOFT_MAX_SKILL": 0.59,
-  "TIER_1": 10,
-  "TIER_2": 15,
-  "TIER_3": 25,
-  "TIER_4": 45,  
+  "TIER_1": 10 ,
+  "TIER_2": 25,
+  "TIER_3": 45,
+  "TIER_4": 60,
+  "TIER_5": 75,
   "SKILL_CAP": 60,
   "SKILL_SOFT_CAP": 0,
   "SKILL_CHEAT_CAP": 60,
   "SKILL_LEAK": 0,
   "STEALTH": 4,
   "MIN_SPEED": 0.001,
-  "FOOD_AMOUNT": 0.4, 
+  "FOOD_AMOUNT": 0, 
   "SKILL_BOOST": 5,
-  "BOTS": 15,
+  "BOTS": 0,
   "GLASS_HEALTH_FACTOR": 2
 }
- 
