🏢⚾️ Checkpoint ./config.json:24501867/1816

--- a/config.json
+++ b/config.json
@@ -17,18 +17,24 @@
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["watr", "watr", "watr","watr", "watr", "watr","watr", "watr", "watr"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"],
-   ["norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm"],
-   ["norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm"]
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["sand", "sand", "sand", "sand", "sand", "sand","sand", "sand", "sand","sand", "sand", "sand", "sand", "sand", "sand"],
+   ["sand", "sand", "sand", "sand", "sand", "sand","sand", "sand", "sand","sand", "sand", "sand", "sand", "sand", "sand"],
+   ["sand", "sand", "sand"," sand", "sand", "sand","sand", "sand", "sand","sand", "sand", "sand", "sand", "sand", "sand"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "dom2","norm", "dom2", "norm","dom2", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"]
   ],
-  "X_GRID": 9,
-  "Y_GRID": 9,
+  "X_GRID": 15,
+  "Y_GRID": 15,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
