--- a/config.json
+++ b/config.json
@@ -23,9 +23,9 @@
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
-   ["sand", "sand", "sand", "sand", "sand", "sand","sand", "sand", "sand","sand", "sand", "sand", "sand", "sand", "sand"],
-   ["sand", "sand", "sand", "sand", "sand", "sand","sand", "sand", "sand","sand", "sand", "sand", "sand", "sand", "sand"],
-   ["sand", "sand", "sand", "sand", "sand", "sand","sand", "sand", "sand","sand", "sand", "sand", "sand", "sand", "sand"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
+   ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
    ["norm", "norm", "norm", "norm", "norm", "norm","norm", "norm", "norm","norm", "norm", "norm", "norm", "norm", "norm"],
