👘🍂 Checkpoint ./game/entities.js:24501867/1151 ./config.json:24501867/1 ./server.js:24501867/9890 ./game/protocol.js:24501867/2288 ./game/drawBackground.js:24501867/5874

--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
   "verbose": true,
    "WIDTH": 7000,
   "HEIGHT": 7000,  
-  "MODE": "tdm",  
+  "MODE": "2tdm",  
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
